--- a/style/header.css
+++ b/style/header.css
@@ -1,80 +1,185 @@
-.cabecalho {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    position: fixed;
-    z-index: 1000;  
-    width: 100%;
-    background-color: var(--azul-um);
-    padding: 0.5rem 0;
+@media screen and (max-width: 10000px) {
+    .cabecalho {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        position: fixed;
+        z-index: 1000;  
+        width: 100vw;
+        background-color: var(--azul-um);
+        padding: 0.5rem 0;
+    }
+    
+    .cabecalho_img {
+        width: 80px;
+        margin-left: 10vw;
+    }
+    
+    .opcoes{
+        background-color: var(--azul-quatro);
+        padding: 0.5vw;
+        border-radius: 2vw;
+    }
+    .opcao{
+        color: var(--azul-dois);
+        text-decoration: none;
+        font-size: 1.2vw;
+        margin: 0 1vw;
+        font-family: var(--font-paint);
+        font-weight: 400;
+    } .opcao:hover, .opcao:active{
+        color: var(--cor-dois);
+        scale: 1.2;
+        border-bottom: 2px solid var(--cor-dois);
+        padding: 0.1em;
+        transition: 0.4s;
+    } .opcao:active {
+        color: var(--cor-tres);
+        border-bottom: 2px solid var(--cor-tres);
+        transition: 0s;
+    }
+    
+/* ============ Botão Animação ============ */     
+    .contate-me-botao {
+        color: var(--azul-um);
+        text-decoration: none;
+        border-radius: 5px;
+        padding: 10px 25px;
+        font-family: var(--font-paint);
+        font-size: 1vw;
+        font-weight: 400;
+        background: transparent;
+        cursor: pointer;
+        transition: all 0.3s ease;
+        position: relative;
+        display: inline-block;
+        box-shadow: 3px 3px 5px var(--azul-dois), -3px -3px 5px var(--azul-dois);
+        margin-right: 10vw;
+    }
+    .contate-me-botao {
+        background: var(--azul-quatro);
+        border: none;
+        z-index: 1;
+    }
+    .contate-me-botao:after {
+        position: absolute;
+        content: "";
+        width: 0;
+        height: 100%;
+        top: 0;
+        right: 0;
+        z-index: -1;
+        background-color: var(--azul-tres);
+        border-radius: 5px;
+        box-shadow: 3px 3px 5px var(--cor-tres), -3px -3px 5px var(--cor-tres); 
+        transition: all 0.3s ease;
+    }
+    .contate-me-botao:hover {
+        color: var(--cor-tres);
+    }
+    .contate-me-botao:hover:after {
+        left: 0;
+        width: 100%;
+    }
+    .contate-me-botao:active {
+        top: 2px;
+    }
+/* ============ Botão Animação ============ */     
+    
+    .cabecalho_menu {
+        display: none;
+    }
 }
 
-.cabecalho_img {
-    width: 80px;
-    margin-left: 10rem;
+@media screen and (max-width:840px) {
+    .cabecalho_img {
+        margin-left: 5vw;
+        width: 60px;
+    }
+    .contate-me-botao {
+        margin-right: 5vw;
+    }
 }
 
-.opcoes{
-    background-color: var(--azul-quatro);
-    padding: 1rem;
-    border-radius: 2rem;
-}
-.opcao{
-    color: var(--azul-dois);
-    text-decoration: none;
-    font-size: 1.3rem;
-    margin: 0 1rem;
-    font-family: var(--font-paint);
-    font-weight: 400;
-} .opcao:hover, .opcao:active{
-    color: var(--cor-dois);
-    scale: 1.2;
-    border-bottom: 2px solid var(--cor-dois);
-    padding: 0.1em;
-    transition: 0.4s;
-}
+@media screen and (max-width:500px) {
+    .cabecalho_img {
+        margin-left: 2vw;
+    }
 
-.contate-me-botao {
-    color: var(--azul-um);
-    text-decoration: none;
-    border-radius: 5px;
-    padding: 10px 25px;
-    font-family: var(--font-paint);
-    font-size: 1vw;
-    font-weight: 400;
-    background: transparent;
-    cursor: pointer;
-    transition: all 0.3s ease;
-    position: relative;
-    display: inline-block;
-    box-shadow: 3px 3px 5px var(--azul-dois), -3px -3px 5px var(--azul-dois);
-    margin-right: 10rem;
+/* ============ Menu Hamburuger ============ */ 
+    .cabecalho_menu {
+        display: flex; /* aparecer o menu */
+        position: relative; /* poscição da lista */
+        align-items: center; /* poscição da lista */
+    }
+    .cabecalho_menu-hamburguer {
+        width: 4.5em; /* tamanho do menu */
+        height: 4em; /* tamanho do menu */
+        background-image: url("../assets/menu.png"); /* imagem do menu */
+        background-position: center; /* posição */
+        background-repeat: no-repeat; /* não repetir img */
+        display: inline-block; /* posicionamento inline */
+    }
+    .opcoes_botao:checked ~ .opcoes_rotulo > .cabecalho_menu-hamburguer {
+        background-image: url("../assets/hover/menu.png"); /* imagem ativa */
+    }
+    .opcoes_botao:checked ~ .opcoes_rotulo {
+        background: var(--azul-quatro); /*back ativo*/
+    }
+    .menu_img {
+        padding: 0.2em; /*pad imagem*/
+    }
+    .lista_menu {
+        display: none; /*desaparecer lista */
+        position: absolute; /* posição lista */
+        top: 100%; /* distancia do topo */
+        right: 0; /* distancia a direita */
+        /* estilização */
+        background-color: #14094f7a;
+        border-radius: 15px 0 15px 15px;
+        border: 3px solid var(--azul-quatro);
+        text-align: right;
+        list-style-type: none;
+        width: 15rem;
+    }
+    .opcoes_botao:checked ~.lista_menu {
+        display: block; /* aparecer lista */
+    }
+    .opcoes_botao {
+        display: none; /*desaparecer checkbox */
+    }
+    /* estilização */
+    .lista_menu_lista {
+        margin: 0.5rem 0;
+    }
+    .menu_opcao {
+        color: var(--azul-quatro);
+        font-family: var(--font-paint);
+        font-size: 2rem;
+        text-decoration: none;
+        margin: 0.5rem;
+    } 
+    .contate-menu {
+        border-top: 0.5vw solid var(--azul-quatro);
+        margin-top: 1.5rem;
+        padding: 0.5rem 0 0 0.9rem;
+    }
+    .menu_opcao:active {
+        color: var(--cor-dois);
+        background-color: var(--azul-dois);
+    }
+
+    .click {
+        padding-left: 4em;
+    } .click1 {
+        padding-left: 2.5em;
+    } .click2 {
+        padding-left: 1.1em;
+    }
+
+    .opcoes, .contate-me-botao {
+        display: none; /* desaparecer responsivo dextop*/
+    }
+/* ============ Menu Hamburuger ============ */ 
+
 }
-.contate-me-botao {
-    background: var(--azul-quatro);
-    border: none;
-    z-index: 1;
-  }
-  .contate-me-botao:after {
-    position: absolute;
-    content: "";
-    width: 0;
-    height: 100%;
-    top: 0;
-    right: 0;
-    z-index: -1;
-    background-color: var(--azul-dois);
-    border-radius: 5px;
-    box-shadow: 3px 3px 5px var(--cor-dois), -3px -3px 5px var(--cor-dois); 
-    transition: all 0.3s ease;
-  }
-  .contate-me-botao:hover {
-    color: var(--cor-dois);
-  }
-  .contate-me-botao:hover:after {
-    left: 0;
-    width: 100%;
-  }
-  .contate-me-botao:active {
-    top: 2px;
-  }
