--- a/style.css
+++ b/style.css
@@ -35,3 +35,11 @@ body {
     font-weight: 400;
     box-sizing: border-box;
 }
+
+.custom-botao {
+    text-decoration: none;
+    cursor: pointer;
+    transition: all 0.5s ease;
+    position: relative;
+    display: inline-block;
+}
