--- a/style/banner.css
+++ b/style/banner.css
@@ -1,13 +1,10 @@
 @media screen and (max-width: 10000px) {
     .banner {
         background-image: url("../assets/Bricks.png");
-        background-repeat: no-repeat;
+        background-repeat: repeat;
         background-size: contain;
         width: 100%;
-    }
-    
-    .container {
-        height: 100vh;
+        height: 50vw;
     }
     
     .banner_div {
@@ -163,9 +160,19 @@
 
 @media screen and (max-width:500px) {
     .banner {
-        background-size: contain;
-        width: 100%;
+        display: flex;
+        flex-direction: column;
+        background-repeat: repeat-x;
         background-position: 0 10vh;
+        background-size: 200%;
+        height: 112vw;
+    }
+
+    .banner_div {
+        display: flex;
+        flex-direction: column;
+        width: 50%;
+        margin: 0 25%;
     }
 
     .banner_apresentacao {
@@ -173,6 +180,10 @@
     }
 
     .banner_imagem {
-        margin: 50% 0 0 8vw
+        margin: 10% 0 0 0;
+    }
+
+    .banner_img {
+        width: 50vw;
     }
 }
