--- a/style/banner.css
+++ b/style/banner.css
@@ -158,14 +158,13 @@
     }
 }
 
-@media screen and (max-width:500px) {
+@media screen and (max-width:600px) {
     .banner {
         display: flex;
         flex-direction: column;
         background-repeat: repeat-x;
-        background-position: 0 10vh;
         background-size: 200%;
-        height: 112vw;
+        height: 90vw;
     }
 
     .banner_div {
@@ -176,7 +175,8 @@
     }
 
     .banner_apresentacao {
-        margin: 60% 0 0 4vw;
+        margin: 26% 0 0 4vw;
+        scale: 1.5;
     }
 
     .banner_imagem {
