--- a/style.css
+++ b/style.css
@@ -67,9 +67,11 @@ body {
 @media screen and (max-width:600px) {
     .container {
         height: 110vw;
+        width: auto;
     }
 
     .titulo {
         font-size: 3vw;
     }
 }
+
